Changelog
=========

2.1.1 (unreleased)
------------------

- Use obj.__parent__ instead of obj getParentNode() for Zope trunk
  compatibility.
  [elro]

2.1.0 (2011-10-06)
------------------

- Add support for a `limit` option for the catalog based walkers, so it only
  tries to load up to `limit` items at a time, defaulting to no limit.
  [hannosch]

- Catch attribute errors during `brain.getObject` and log them instead of
  breaking the upgrade.
  [hannosch]

2.0.3 (2011-08-11)
------------------

- Undo patch correctly
  [jfroche]

2.0.2 (2011-08-10)
------------------

- Fix migration for folder containing an object (which is often the case) by patching the 'notifyWorkflowCreated' method on WorkflowAware class
  [jfroche]

- Fix for folderish items, also use ATItemMigratorMixin
  [jfroche]

- Add local buildout config
  [jfroche]

- Use module name, not the full file path, to register with the logging module.
  [mj]

2.0.1 - 2010-12-08
------------------

- Unlock locked objects prior to migrating them.
  [ggozad]

2.0 - 2010-07-18
----------------

- No changes.

2.0b1 - 2010-06-13
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Added support for archetypes.schemaextender >= 2.0 and disable the schema
  cache during migrations.
  [hannosch]

2.0a3 - 2009-11-15
------------------

- Fix issue with my adjustment to the _createObjectByType function where the
  portal_type wasn't getting set properly in Plone 3.
  [davisagli]


2.0a2 - 2009-11-15
------------------

- Make the _createObjectByType function call the _constructInstance method
  of the FTI, rather than trying to duplicate its logic.  This adds
  compatibility with CMF 2.2.
  [davisagli]


2.0a1 - 2009-11-14
------------------

- Avoid zope.app dependencies.
  [hannosch]

- Use Zope interfaces from `OFS` and `Archetypes`.
  [witsch]


1.2 - 2009-08-09
----------------

- Fix tests to run on Plone 3.3.
  [witsch]
